# ghostos

./: .clang-format  .gitignore  Cargo.toml  Makefile  README.md  bochsrc  bootloader.asm  build.rs  build.sh  console.c  console.h  constants.def  constants.h  constants.inc  disk.c  disk.h  gdt.asm  gdt.c  gdt.h  hal.c  hal.h  heap.c  heap.h  idt.asm  idt.c  idt.h  kernel.asm  kernel.c  kernel.h  keyboard.c  keyboard.h  layout.txt  linker.ld  memory.c  memory.h  multiboot.h  paging.asm  paging.c  paging.h  process.c  (+12 more)
.cargo/: config.toml
kernel/: Cargo.toml
kernel/src/: gdt.rs  interrupts.rs  io.rs  lib.rs  logger.rs  main.rs  memory.rs  vga.rs
kernel/src/drivers/: mod.rs
kernel/src/drivers/ps2/: keyboard.rs  mouse.rs
kernel/src/task/: simple_executor.rs
kernel/tests/: basic_boot.rs  hdd.rs  heap.rs  panic.rs  stack_overflow.rs
kernel16/: Makefile  kernel16.asm  kernel16.c  linker.lnk
kernel64/: Cargo.toml
kernel64/.cargo/: config.toml
kernel64/src/: gdt.rs  interrupts.rs  lib.rs  main.rs  memory.rs  uart.rs
kernel64/src/task/: executor.rs
kernel64/tests/: basic_boot.rs  heap.rs  panic.rs  stack_overflow.rs
src/: console.c  console.h  interrupts.rs  io.rs  lib.rs  main.rs  memory.h  memory.rs  threading.rs  uart.rs  vga.rs  vga_text_buffer.rs
src/data_structures/: concurrent_queue.rs  mod.rs
src/drivers/: mod.rs
src/drivers/ata/: mod.rs
src/drivers/pci/: controller.rs
src/drivers/ps2/: controller.rs
src/libs/graphics/: colors.rs
src/task/: executor.rs  mod.rs  simple_executor.rs  task_keyboard.rs
test-runner/: Cargo.toml
test-runner/src/: main.rs
tests/: basic_boot.rs  hdd.rs  heap.rs
