[package]
name = "kernel64"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "kernel64"
test = true
bench = false

[dependencies]
bootloader = { version = "0.9", features = ["map_physical_memory"] }
linked_list_allocator = "0.9.0"
pc-keyboard = "0.8.0"
pic8259 = "0.11.0"
spin = "0.10"
uart_16550 = "0.4.0"
volatile = "0.2.6"
x86_64 = "0.15.4"

[dependencies.conquer-once]
version = "0.4.0"
default-features = false

[dependencies.crossbeam-queue]
version = "0.3.12"
default-features = false
features = ["alloc"]

[dependencies.futures-util]
version = "0.3.32"
default-features = false
features = ["alloc"]

[dependencies.lazy_static]
version = "1.5.0"
features = ["spin_no_std"]

[package.metadata.bootimage]
test-args = [
    "-device", "isa-debug-exit,iobase=0xf4,iosize=0x04",
    "-serial", "stdio",
    "-display", "none"
]
test-success-exit-code = 33
test-timeout = 3

[[test]]
name = "panic"
harness = false

[[test]]
name = "stack_overflow"
harness = false
