[workspace]
resolver = "3"
members = ["kernel", "test-runner"]

[package]
name = "ghostos"
version = "0.1.0"
edition = "2024"

[build-dependencies]
bootloader = { version = "=0.11.16", default-features = false, features = ["bios"] }
kernel64 = { path = "kernel", artifact = "bin", target = "x86_64-unknown-none" }
