[package]
name = "kernel64"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "kernel64"
test = true
bench = false

[lints.clippy]
let_and_return = "allow"
manual_range_contains = "allow"

[dependencies]
bootloader_api = "=0.11.16"
heapless = { version = "0.9.3", default-features = false }
linked_list_allocator = "0.9.0"
pc-keyboard = "0.8.0"
pic8259 = "0.11.0"
spin = "0.10"
static_cell = "2.1.1"
uart_16550 = "0.4.0"
volatile = "0.2.6"
x86_64 = "0.15.5"

[dependencies.conquer-once]
version = "0.4.0"
default-features = false

[dependencies.crossbeam-queue]
version = "0.3.12"
default-features = false
features = ["alloc"]

[dependencies.futures-util]
version = "0.3.32"
default-features = false
features = ["alloc"]

[dependencies.lazy_static]
version = "1.5.0"
features = ["spin_no_std"]

[[test]]
name = "panic"
harness = false

[[test]]
name = "stack_overflow"
harness = false
